[package]
name = "rusty-rain"
version = "0.3.6"
authors = ["cowboy8625 <https://github.com/cowboy8625>"]
edition = "2021"
description = "A cross platform CMatrix like program."
readme = "README.md"
repository = "https://github.com/cowboy8625/rusty-rain"
homepage = "https://rusty-rain.xyz"
license-file = "LICENSE"
keywords = ["matrix", "matrix-rain", "emoji", "cmatrix", "rain"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.1.18", features = ["cargo"] }
crossterm = "0.24.0"
rand = "0.8.5"
ezemoji = "0.2.0"
# unicode-width = "0.1.9"

# [profile.release]
# debug = true
